// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM OPS Array nodes are rendered correctly 1`] = `
<div>
  <p>
    test
    more
  </p>
</div>
`;

exports[`DOM OPS Observable child nodes are rendered correctly 1`] = `<div />`;

exports[`DOM OPS Observable child nodes are rendered correctly 2`] = `
<div>
  <p>
    top
    immediate2
    foobar
    bottom
  </p>
</div>
`;

exports[`DOM OPS deep mount and unmount is called at the right time 1`] = `
<div>
  <p>
    <div>
      final
    </div>
  </p>
</div>
`;

exports[`DOM OPS mount and unmount is called at the right time 1`] = `
<div>
  <p>
    <div>
      final
    </div>
  </p>
</div>
`;

exports[`DOM OPS should allow prepared elements to be detachable 1`] = `
Object {
  "$$type": Symbol(Akta element),
  "key": undefined,
  "props": Object {
    "children": "Daniel",
  },
  "type": "p",
}
`;

exports[`DOM OPS should handle observable child 1`] = `
<div>
  <p>
    Daniel
  </p>
</div>
`;

exports[`DOM OPS should handle observable classNames 1`] = `
<div>
  <div
    class="cl3"
  />
</div>
`;

exports[`DOM OPS should handle prepare 1`] = `
<div>
  <p>
    Loading
  </p>
</div>
`;

exports[`DOM OPS should handle prepare 2`] = `
<div>
  <p>
    <span>
      Finally
    </span>
  </p>
</div>
`;

exports[`DOM OPS should handle teardown 1`] = `
<div>
  <div>
    <p>
      Data3
    </p>
  </div>
</div>
`;

exports[`DOM OPS should not activate out of order prepared children: first 1`] = `
<div>
  <div>
    first
    second
    <div>
      <h2>
        Links
      </h2>
      <div
        id="55"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM OPS should remove old array items when sizes differ 1`] = `
<div>
  <div>
    <p>
      0
    </p>
    <p>
      1
    </p>
    <p>
      2
    </p>
    <p>
      3
    </p>
    <p>
      4
    </p>
    <p>
      5
    </p>
    <p>
      6
    </p>
    <p>
      7
    </p>
    <p>
      8
    </p>
    <p>
      9
    </p>
  </div>
</div>
`;

exports[`DOM OPS should remove old array items when sizes differ 2`] = `
<div>
  <div>
    <p>
      0
    </p>
    <p>
      1
    </p>
    <p>
      2
    </p>
    <p>
      3
    </p>
    <p>
      4
    </p>
  </div>
</div>
`;

exports[`DOM OPS should remove old array items when sizes differ 3`] = `
<div>
  <div />
</div>
`;

exports[`Mount ops 2 should create deterministic structures 1`] = `
<article>
  <div />
  Baz
  Foobar
  <div />
</article>
`;

exports[`Observe node Should handle events 1`] = `
<article>
  <div>
    body
  </div>
</article>
`;

exports[`Observe node shoudl work 1`] = `
<article>
  <div>
    baz
    test
    foobar
  </div>
</article>
`;

exports[`Observe node should handle case 4 1`] = `<article />`;

exports[`Observe node should handle fragments properly 1`] = `
<article>
  <div>
    <h2>
      Header
    </h2>
    <div>
      test
      foo
    </div>
    <div>
      test
      foo
    </div>
    <div>
      after
    </div>
  </div>
</article>
`;

exports[`Observe node should mount elements in correct order 1`] = `
<article>
  <div>
    Param id: 42
    Foobar2
    Match 42
  </div>
</article>
`;

exports[`Observe node should place later nodes in right order 1`] = `
<article>
  <div>
    <div>
      first
      second
      third
    </div>
    <div>
      first
      second
      third
    </div>
    <div>
      first
      second
      third
    </div>
  </div>
</article>
`;
